--- a/_posts/2021-11-23-netflix-content-analysis.html
+++ b/_posts/2021-11-23-netflix-content-analysis.html
@@ -1,20 +1,20 @@
 ---
 title: "pyecharts로 넷플릭스 데이터 시각화하기"
-author_profile: true
 search: true
 categories: 
   - Data Visualization
 tags: 
   - test
-layout: jupyter2
-date: 2021-10-31
+date: 2021-11-23
 ---
+
+
 
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
 
-<title>netflix_content_analysis</title>
+<title>2021-11-23-netflix-content-analysis</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13042,11 +13042,13 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 <style type="text/css">
 /* Overrides of notebook CSS for static HTML export */
 body {
+  width: auto;
   overflow: scroll;
   padding: 8px;
-  font-size: 1.1 em;
   box-shadow: none;
 }
+
+
 
 .highlight .kn { color: #a4f5ba; font-weight: bold }
 .highlight .k { color: #a4f5ba; font-weight: bold }
@@ -13075,7 +13077,6 @@ pre {
   display: block;
   padding: 8.5px;
   margin: 0 0 9px;
-  font-size: 12px;
   line-height: 1.42857143;
   word-break: break-all;
   word-wrap: break-word;
@@ -13085,14 +13086,33 @@ pre {
   border-radius: 2px;
 }
 
+div.text_cell_render {
+    font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+    outline: none;
+    resize: none;
+    width: inherit;
+    border-style: none;
+    color: #000;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
 div#notebook {
-  overflow: scroll;
+  overflow: inherit;
   border-top: none;
   border: none;
   padding: none;
-  font-size: 1.2em;
   box-shadow: none;
 }
+
+
+#notebook-container {
+    padding: 0px;
+    min-height: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
 
 div.input_area {
     background-color: #263238;
