--- a/_posts/2021-11-23-netflix-content-analysis.html
+++ b/_posts/2021-11-23-netflix-content-analysis.html
@@ -13079,6 +13079,7 @@ body {
 .label{
     color: black;
     font-size: 16px;
+    font-weight: normal;
 }
 
 pre {
@@ -13186,7 +13187,6 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="pyecharts&#47196;-&#45367;&#54540;&#47533;&#49828;-&#45936;&#51060;&#53552;-&#49884;&#44033;&#54868;&#54616;&#44592;">pyecharts&#47196; &#45367;&#54540;&#47533;&#49828; &#45936;&#51060;&#53552; &#49884;&#44033;&#54868;&#54616;&#44592;<a class="anchor-link" href="#pyecharts&#47196;-&#45367;&#54540;&#47533;&#49828;-&#45936;&#51060;&#53552;-&#49884;&#44033;&#54868;&#54616;&#44592;">&#182;</a></h1><hr>
 <p>안녕하세요, 킹래빗입니다🐰<br>
 데이터 분석으로 처음 글을 적어보는데요,</p>
 <p>다들 많이 보시는 넷플릭스 영화 및 TV 콘텐츠를 분석해 본 내용입니다🎬🍿<br>
