--- a/_posts/2021-11-23-netflix-content-analysis.html
+++ b/_posts/2021-11-23-netflix-content-analysis.html
@@ -14625,8 +14625,7 @@ myChart_b080c58c457c4444863f7495bfe0b132.setOption(option_b080c58c457c4444863f74
 다큐멘터리가 액션 영화보다 약간 더 많은 점, TV 드라마가 이 두 장르보다 적은 것도 개인적으로는 의외입니다🤔<br>
 넷플릭스에서 다큐멘터리가 생각보다 인기라는 얘기를 들었는데 이런 점이 반영된 것일 수도 있겠네요.</p>
 <hr>
-<p>여기까지 넷플릭스 콘텐츠 데이터를 분석해보았는데요, 생각보다 글이 길어져서 2편에서 마저 적으려고 합니다😅<br>
-읽어주셔서 감사하고 궁금하신 부분 있으면 댓글로 달아주세요!</p>
+<p>여기까지 넷플릭스 콘텐츠 데이터를 분석해보았습니다. 읽어주셔서 감사합니다:)</p>
 
 </div>
 </div>
